@startuml
skinparam classAttributeIconSize 0
interface Estado
abstract class Palo
abstract class Valor

class Carta {
    +obtenerIndice(): int
    +modificarPuntuacion(puntuacion : PuntuacionTirada): void
    +aplicarTaror(modificador : Modificador, estrategia : EstrategiaModificacion): void
    +puntosBase(): int
    +compararValor(otraCarta : Carta): boolean
    +compararPalo(otraCarta : Carta): boolean
    +void()
}

interface Estado {
{abstract}+modificarPuntuacionpuntuacion : PuntuacionTirada): void
{abstract}+puntosBase(puntuacionValor : int): int
}

abstract class Palo{
    {abstract}+compararCon(unPalo : Palo) : boolean
}

abstract class Valor{
    -int puntosBase
    {abstract}+nueracion() : int
    {abstract}+compararCon(unValor : Valor) : boolean
}

Carta *-- Valor
Carta *-- Palo
Carta *-- Estado
@enduml